# python-project-template

./: Dockerfile  docker-build.sh  setup.cfg
src/python_project_template/: main.py
src/python_template_project/: main.py
tests/: test_hello_world.py
