[metadata]
name = python_template_project
version = 0.0.1
author = Alberto Lanaro
author_email = alb.lanaro@gmail.com
description = Python template project
long_description = file: README.md
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = project, template
zip_safe = False

[options]
packages = python_template_project
python_requres = >=3.7
package_dir =
    = src
install_requires =
    requests>=2.28.1
zip_safe = no

[options.extras_require]
testing = 
    pytest>=7.1.2

[options.entry_points]
console_scripts = 
    python_template_project = python_template_project.main:main